--- a/package.json
+++ b/package.json
@@ -1,34 +1,39 @@
 {
-    "name": "calendar",
-    "version": "1.0.0",
-    "description": "",
-    "main": "script.js",
-    "scripts": {
-        "dev": "vite",
-        "build-vite": "vite build",
-        "preview": "vite preview",
-        "build": "tsc",
-        "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/react": "^18.2.24",
-        "@types/react-dom": "^18.2.8",
-        "@vitejs/plugin-react": "^2.1.0",
-        "eslint": "^8.24.0",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
-        "eslint-plugin-react": "^7.31.8",
-        "live-server": "^1.2.2",
-        "prettier": "3.0.3",
-        "typescript": "^5.2.2",
-        "vite": "^3.1.4"
-    },
-    "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
-    }
+  "name": "calendar",
+  "version": "1.0.0",
+  "description": "",
+  "main": "script.js",
+  "scripts": {
+    "dev": "vite",
+    "build-vite": "vite build",
+    "preview": "vite preview",
+    "build": "tsc",
+    "lint": "eslint \"src/**/*.{ts,tsx}\" --quiet"
+  },
+  "keywords": [],
+  "author": "Emilija Rackauskaite",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
+    "@vitejs/plugin-react": "^2.1.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "live-server": "^1.2.2",
+    "prettier": "3.0.3",
+    "typescript": "^5.2.2",
+    "vite": "^3.1.4"
+  },
+  "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
+    "sort-by": "^1.2.0"
+  }
 }
